--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
     * { box-sizing: border-box; }
+
     body {
       font-family: 'Sarabun', sans-serif;
       margin: 0;
       height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       background: linear-gradient(135deg, #323232, #1a1a1a);
       color: white;
-      overflow-x: hidden;
-      overflow-y: auto;
-      padding-bottom: 80px; /* เว้นที่สำหรับ about */
+      overflow: hidden;
     }
+
     body::before {
       content: "";
       position: fixed;
@@ -32,6 +31,7 @@
       filter: blur(6px) brightness(0.5);
       z-index: -1;
     }
+
     .container {
       background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
@@ -44,11 +44,13 @@
       position: relative;
       color: white;
     }
+
     h2 {
       margin-bottom: 25px;
       font-size: 1.8rem;
       text-shadow: 0 2px 6px rgba(0,0,0,0.4);
     }
+
     input[type="number"] {
       width: 100%; padding: 14px 15px; margin: 12px 0;
       border: none; border-radius: 12px;
@@ -57,7 +59,9 @@
       color: white;
       box-shadow: inset 0 0 8px rgba(255,255,255,0.15);
     }
+
     input::placeholder { color: rgba(255,255,255,0.7); }
+
     button {
       width: 100%; padding: 16px 0; margin-top: 18px;
       font-size: 1.1rem;
@@ -65,14 +69,15 @@
       background: linear-gradient(45deg, #667eea, #764ba2);
       border: none; border-radius: 15px;
       cursor: pointer;
-      user-select: none;
     }
+
     #fullscreenBtn, #exitFullscreenBtn {
       margin-top: 10px; padding: 10px 0;
       font-size: 1rem;
       border-radius: 12px;
       background: linear-gradient(45deg, #34ace0, #33d9b2);
     }
+
     #exitFullscreenBtn { display: none; }
 
     #duck {
@@ -87,8 +92,8 @@
       z-index: 999;
       animation: float 3s ease-in-out infinite;
       transition: transform 0.3s ease;
-      user-select: none;
     }
+
     #duck:hover {
       background: rgba(255,255,255,0.4);
       transform: scale(1.2);
@@ -110,42 +115,42 @@
       text-decoration: none;
     }
 
-    /* About container ปรับแก้ให้แสดงข้อความยาวๆ อ่านง่าย */
+    @media (max-width: 600px) {
+      .container { padding: 25px; }
+    }
+
+    /* เครดิตแบบแนวโปสเตอร์ */
     .credit-container {
       position: fixed;
-      bottom: 8px;
+      bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
-      max-width: 90vw;
-      color: #bbb;
+      max-width: 92vw;
+      color: #ccc;
       font-size: 0.55rem;
-      font-weight: 300;
       font-family: 'Sarabun', sans-serif;
       text-align: center;
-      user-select: none;
       background: transparent;
-      box-shadow: none;
       text-shadow: 0 0 3px rgba(0,0,0,0.6);
       z-index: 9999;
       pointer-events: none;
-      white-space: normal;
-      overflow: visible;
-      padding: 0 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
       line-height: 1.3em;
-      word-wrap: break-word;
-      letter-spacing: 0.03em;
+      white-space: normal;
+      padding: 0 12px;
     }
 
-    /* ปรับสำหรับมือถือ */
+    .credit-container .credit-line {
+      display: block;
+    }
+
     @media (max-width: 600px) {
-      .container {
-        padding: 25px;
-      }
       .credit-container {
         font-size: 0.45rem;
-        max-width: 95vw;
-        padding: 0 8px;
         line-height: 1.25em;
+        padding: 0 8px;
       }
     }
   </style>
@@ -162,56 +167,4 @@
     <div id="result"></div>
   </div>
 
-  <div id="duck" onclick="window.location.href='songs.html'" title="ไปหน้าเพลง">🦆</div>
-
-  <!-- About / Credit ด้านล่างสุด -->
-  <div class="credit-container" aria-label="เกี่ยวกับเว็บไซต์">
-    เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้อย่างรวดเร็วและสะดวกสบาย ตัวเว็บออกแบบ UI ให้ดูทันสมัย ใช้งานง่าย สีสันสบายตา และตอบโจทย์การใช้งานจริง โค้ดถูกเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไวและทำงานได้บนทุกอุปกรณ์ รวมถึงฟีเจอร์เปิดเต็มจอ เพื่อเพิ่มความชัดเจนในการแสดงผล และการเข้าถึงข้อมูลอย่างรวดเร็ว พัฒนาโดย Jack Makro © 2025 ทีมงานผู้ดูแลระบบ: Jack Makro, Team Dev RoshanzeroX ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้ หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12
-  </div>
-
-  <script>
-    let fullResult = '';
-    const resultEl = document.getElementById('result');
-    const fullscreenBtn = document.getElementById('fullscreenBtn');
-    const exitFullscreenBtn = document.getElementById('exitFullscreenBtn');
-
-    function calculate() {
-      const sku = parseFloat(document.getElementById('sku').value);
-      const mu = parseFloat(document.getElementById('mu').value);
-      const days = parseFloat(document.getElementById('days').value);
-
-      if (isNaN(sku) || isNaN(mu) || isNaN(days) || days <= 0) {
-        alert('กรุณากรอกข้อมูลให้ครบและถูกต้อง');
-        return;
-      }
-
-      const result = ((sku / 12 + mu / 34) / (2 * days)).toFixed(8);
-      fullResult = result;
-      resultEl.innerText = `เฉลี่ยออเดอร์ต่อวัน: ${result}`;
-      resultEl.onclick = () => {
-        window.location.href = `average.html?result=${encodeURIComponent(result)}`;
-      };
-    }
-
-    function openFullscreen() {
-      const elem = document.documentElement;
-      if (elem.requestFullscreen) elem.requestFullscreen();
-      fullscreenBtn.style.display = 'none';
-      exitFullscreenBtn.style.display = 'block';
-    }
-
-    function closeFullscreen() {
-      if (document.exitFullscreen) document.exitFullscreen();
-      fullscreenBtn.style.display = 'block';
-      exitFullscreenBtn.style.display = 'none';
-    }
-
-    document.addEventListener('fullscreenchange', () => {
-      if (!document.fullscreenElement) {
-        fullscreenBtn.style.display = 'block';
-        exitFullscreenBtn.style.display = 'none';
-      }
-    });
-  </script>
-</body>
-</html>
+  <div id="duck" onclick
