--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>คำนวณออเดอร์เฉลี่ย</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet" />
 </head>
 <body>
   <div class="container" id="container">
@@ -17,7 +16,7 @@
     <button onclick="calculate()">คำนวณ</button>
     <button id="fullscreenBtn" onclick="openFullscreen()">เปิดเต็มจอ</button>
     <button id="exitFullscreenBtn" onclick="closeFullscreen()">ออกจากเต็มจอ</button>
-    <div id="result"></div>
+    <div id="result" title="คลิกเพื่อดูผลลัพธ์แบบเต็ม">ผลลัพธ์จะแสดงที่นี่</div>
   </div>
 
   <div id="duck" onclick="window.location.href='songs.html'" title="ไปหน้าเพลง">🦆</div>
