--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <div class="background"></div> <!-- พื้นหลังเอฟเฟกต์ -->
+
   <div class="container" id="container">
     <h2>คำนวณออเดอร์เฉลี่ยต่อวัน</h2>
     <input id="sku" type="number" placeholder="กรอก SKU" />
