--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <input id="sku" type="number" placeholder="กรอก SKU" />
     <input id="mu" type="number" placeholder="กรอก MU" />
     <input id="days" type="number" placeholder="จำนวนวันทำงาน" />
-    <button id="calculateBtn">คำนวณ</button>
-    <button id="fullscreenToggleBtn">เปิดเต็มจอ</button>
-    <div id="result"></div>
+    <div>
+      <button id="fullscreenBtn">เปิดเต็มจอ</button>
+      <button id="exitFullscreenBtn">ออกจากเต็มจอ</button>
+    </div>
+    <button onclick="calculate()">คำนวณ</button>
+    <div id="result" title="คลิกเพื่อดูรายละเอียด"></div>
   </div>
 
-  <div id="duck" title="ไปหน้าเพลง" onclick="window.location.href='songs.html'">🦆</div>
+  <div id="duck" onclick="window.location.href='songs.html'" title="ไปหน้าเพลง">🦆</div>
 
   <footer>
     <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อเป็นเครื่องมือช่วยในการคำนวณและแสดงผลค่าเฉลี่ยออเดอร์ต่อวันอย่างง่ายดาย</p>
@@ -30,8 +33,6 @@
     <p>ขอบคุณทุกท่านที่สนับสนุนและใช้งานเว็บไซต์นี้</p>
     <p>หากพบปัญหาหรือข้อเสนอแนะสามารถติดต่อได้ที่ P'Jack OCS Lock 12</p>
   </footer>
-
-  <canvas id="confettiCanvas"></canvas>
 
   <script src="script.js"></script>
 </body>
