--- a/average.html
+++ b/average.html
@@ -4,62 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ผลลัพธ์ค่าเฉลี่ย</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Sarabun&display=swap');
-    * { box-sizing: border-box; }
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      font-family: 'Sarabun', sans-serif;
-    }
-
-    body {
-      background: linear-gradient(135deg, #323232, #1a1a1a);
-      color: white;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      text-align: center;
-    }
-
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background-image: url('bg.webp');
-      background-size: cover;
-      background-position: center;
-      filter: blur(6px) brightness(0.5);
-      z-index: -2;
-    }
-
-    #particles {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      pointer-events: none;
-    }
-
-    #resultImage {
-      max-width: 200px;
-      border-radius: 15px;
-      box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
-      margin-bottom: 15px;
-      transition: transform 0.3s ease;
-      z-index: 1;
-    }
-
-    #resultImage:hover {
-      transform: scale(1.05);
-    }
-
+    /* เพิ่มเติมเฉพาะหน้า average */
     #avgResult {
       font-size: 2.5rem;
       margin-bottom: 20px;
@@ -67,7 +14,6 @@
       color: #ffd700;
       animation: pulse 2.5s ease-in-out infinite;
     }
-
     .message {
       font-size: 1.4rem;
       font-weight: bold;
@@ -75,12 +21,17 @@
       text-shadow: 0 2px 4px rgba(0,0,0,0.6);
       animation: pulse 2.5s ease-in-out infinite;
     }
-
-    @keyframes pulse {
-      0%, 100% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(1.04); opacity: 0.9; }
+    #resultImage {
+      max-width: 200px;
+      border-radius: 15px;
+      box-shadow: 0 0 25px rgba(255, 215, 0, 0.5);
+      margin-bottom: 15px;
+      transition: transform 0.3s ease;
+      cursor: default;
     }
-
+    #resultImage:hover {
+      transform: scale(1.05);
+    }
     .floating-btn {
       position: fixed;
       bottom: 20px;
@@ -98,40 +49,29 @@
       animation: float 3s ease-in-out infinite;
       z-index: 5;
     }
-
     .floating-btn:hover {
       transform: scale(1.1);
     }
-
-    #homeBtn {
-      right: 20px;
+    #homeBtn { right: 20px; }
+    #fullscreenBtn { left: 20px; }
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.04); opacity: 0.9; }
     }
-
-    #fullscreenBtn {
-      left: 20px;
-    }
-
     @keyframes float {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-10px); }
     }
-
     @media (max-width: 600px) {
-      #avgResult {
-        font-size: 2rem;
-      }
-      #resultImage {
-        max-width: 70%;
-      }
-      .message {
-        font-size: 1.2rem;
-      }
+      #avgResult { font-size: 2rem; }
+      #resultImage { max-width: 70%; }
+      .message { font-size: 1.2rem; }
     }
   </style>
 </head>
 <body>
   <canvas id="particles"></canvas>
-  <div>
+  <div style="text-align:center; position: relative; z-index:10;">
     <img id="resultImage" src="" alt="" />
     <div id="avgResult">กำลังโหลด...</div>
     <div class="message" id="messageText"></div>
@@ -141,36 +81,7 @@
   <div id="fullscreenBtn" class="floating-btn" onclick="openFullscreen()">📱</div>
 
   <script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const result = parseFloat(urlParams.get('result'));
-    const avgEl = document.getElementById('avgResult');
-    const imgEl = document.getElementById('resultImage');
-    const msgEl = document.getElementById('messageText');
-
-    if (!isNaN(result)) {
-      avgEl.innerText = `ค่าเฉลี่ยออเดอร์ต่อวัน: ${result.toFixed(8)}`;
-
-      if (result >= 12.00) {
-        const options = [
-          { img: "1(10).png", text: "ก็ทำได้หนิหว่า มา!! ชนแก้ว !!" },
-          { img: "1 (2).png", text: "เป็นคนดีนี้น่า" }
-        ];
-        const choice = options[Math.floor(Math.random() * options.length)];
-        imgEl.src = choice.img;
-        msgEl.innerText = choice.text;
-      } else if (result < 1) {
-        imgEl.src = "1 (1).png";
-        msgEl.innerText = "ยอดขายต่ำเกินไป ควรเร่งปรับปรุงกลยุทธ์";
-      } else {
-        imgEl.src = "1 (1).png";
-        msgEl.innerText = "ดีขึ้นให้ได้นะ";
-      }
-    } else {
-      avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
-      imgEl.style.display = 'none';
-      msgEl.innerText = "";
-    }
-
+    // ฟังก์ชันเปิดเต็มจอ
     function openFullscreen() {
       const docElm = document.documentElement;
       if (docElm.requestFullscreen) {
@@ -183,6 +94,37 @@
         docElm.msRequestFullscreen();
       }
       screen.orientation.lock('landscape').catch(() => {});
+    }
+
+    // อ่านค่า result จาก URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const result = parseFloat(urlParams.get('result'));
+    const avgEl = document.getElementById('avgResult');
+    const imgEl = document.getElementById('resultImage');
+    const msgEl = document.getElementById('messageText');
+
+    if (!isNaN(result)) {
+      avgEl.innerText = `ค่าเฉลี่ยออเดอร์ต่อวัน: ${result.toFixed(8)}`;
+
+      if (result >= 12) {
+        const options = [
+          { img: "1(10).png", text: "ก็ทำได้หนิหว่า มา!! ชนแก้ว !!" },
+          { img: "1 (2).png", text: "เป็นคนดีนี้น่า" }
+        ];
+        const choice = options[Math.floor(Math.random() * options.length)];
+        imgEl.src = choice.img;
+        msgEl.innerText = choice.text;
+      } else if (result < 1) {
+        imgEl.src = "1 (1).png";
+        msgEl.innerText = "ดีขึ้นให้ได้นะ";
+      } else {
+        imgEl.src = "";  // ภาพว่าง
+        msgEl.innerText = "";
+      }
+    } else {
+      avgEl.innerText = "ไม่พบข้อมูลค่าเฉลี่ย";
+      imgEl.src = "";
+      msgEl.innerText = "";
     }
 
     // particle effect
@@ -205,35 +147,4 @@
         particles.push({
           x: Math.random() * w,
           y: Math.random() * h,
-          r: Math.random() * 2 + 1,
-          dx: (Math.random() - 0.5) * 0.5,
-          dy: (Math.random() - 0.5) * 0.5,
-          alpha: Math.random() * 0.6 + 0.2
-        });
-      }
-    }
-
-    function drawParticles() {
-      ctx.clearRect(0, 0, w, h);
-      ctx.fillStyle = "white";
-      particles.forEach(p => {
-        ctx.globalAlpha = p.alpha;
-        ctx.beginPath();
-        ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
-        ctx.fill();
-        p.x += p.dx;
-        p.y += p.dy;
-        if (p.x < 0) p.x = w;
-        if (p.x > w) p.x = 0;
-        if (p.y < 0) p.y = h;
-        if (p.y > h) p.y = 0;
-      });
-      ctx.globalAlpha = 1;
-      requestAnimationFrame(drawParticles);
-    }
-
-    createParticles(50);
-    drawParticles();
-  </script>
-</body>
-</html>
+          r: Math.random() * 2 + 1
